--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "qa-tests",
   "dependencies": {},
   "devDependencies": {
-    "protractor": "^5.3.0"
+    "fs-extra": "^5.0.0",
+    "protractor": "^5.3.0",
+    "protractor-beautiful-reporter": "^1.1.1"
   }
 }
